syntax = "proto3";

option go_package = "go/blogplatformservice";

package blogplatformservice;

import "google/protobuf/timestamp.proto";

service BlogPlatformService {
  rpc GetPost(GetPostRequest) returns (PostResponse);
  rpc CreatePost(CreatePostRequest) returns (PostResponse);
  rpc UpdatePost(UpdatePostRequest) returns (PostResponse);
  rpc DeletePost(DeletePostRequest) returns (DeleteResponse);
}

message GetPostRequest {
  string PostID = 1; //UUID
}

message PostResponse {
  string PostID = 1; //UUID
  string Title = 2;
  string Content = 3;
  string Author = 4;
  google.protobuf.Timestamp PublicationDate = 5;
  repeated string Tags = 6;
}

message CreatePostRequest {
  string Title = 1;
  string Content = 2;
  string Author = 3;
  google.protobuf.Timestamp PublicationDate = 4;
  repeated string Tags = 5;
}

message UpdatePostRequest {
  string PostID = 1; //UUID
  string Title = 2;
  string Content = 3;
  string Author = 4;
  google.protobuf.Timestamp PublicationDate = 5;
  repeated string Tags = 6;
}

message DeletePostRequest {
  string PostID = 1; //UUID
}

message DeleteResponse {
}
